Markup Shell and color pallete chosen

--- a/index.html
+++ b/index.html
@@ -7,5 +7,95 @@
     <title>RVA-MACS</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <h2>Header Logo</h2>
+        <ul>
+          <li><h3>Header Link One</h3></li>
+          <li><h3>Header Link One</h3></li>
+          <li><h3>Header Link One</h3></li>
+        </ul>
+      </nav>
+    </header>
+
+    <section class="section-one">
+      <article class="section-title">
+        <h1>This Website is Awesome</h1>
+        <p>
+          Heres a description of why this website is so awesome. Also here is
+          some Pizza Ipsum. Pizza ipsum dolor amet mayo mozzarella stuffed thin
+          crust Chicago style parmesan. Lasagna thin crust mushrooms party.
+          Pizza red onions extra sauce pineapple bianca hand tossed onions large
+          black olives NY style.
+        </p>
+        <button class="section-button">Sign Up</button>
+      </article>
+      <div class="section-one__image"></div>
+    </section>
+
+    <section class="section-two">
+      <h3>Some Random Information</h3>
+      <div class="card-holder">
+        <div class="card">
+          <div class="card-image"></div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Sit amet
+            justo donec enim diam vulputate ut pharetra.
+          </p>
+        </div>
+        <div class="card">
+          <div class="card-image"></div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Sit amet
+            justo donec enim diam vulputate ut pharetra.
+          </p>
+        </div>
+        <div class="card">
+          <div class="card-image"></div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Sit amet
+            justo donec enim diam vulputate ut pharetra.
+          </p>
+        </div>
+        <div class="card">
+          <div class="card-image"></div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Sit amet
+            justo donec enim diam vulputate ut pharetra.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section class="section-three">
+      <blockquote>
+        Et tortor consequat id porta. Commodo viverra maecenas accumsan lacus
+        vel facilisis volutpat est velit. Pellentesque nec nam aliquam sem et.
+        Proin libero nunc consequat interdum. Purus non enim praesent elementum
+        facilisis leo. Et tortor consequat id porta nibh. Ut pharetra sit amet
+        aliquam id diam maecenas ultricies mi. Aliquam sem et tortor consequat
+        id porta nibh venenatis cras. Ante in nibh mauris cursus mattis molestie
+        a iaculis.
+        <blockquote>
+      <p><strong>-CoffeyDoesCode, Man of Pizza</strong></p>
+    </section>
+
+    <section class="section-four">
+      <div class="section-four__container">
+        <div>
+          <h4>Call to Action!</h4>
+          <p>Sign Up by clicking the button on the right!</p>
+        </div>
+        <div>
+          <button>Sign Up</button>
+        </div>
+      </div>
+      <footer>Copyright &#169; The Odin Project 2021</footer>
+    </section>
+  </body>
 </html>
