Styling Header and Sect 1

--- a/index.html
+++ b/index.html
@@ -23,15 +23,13 @@
       <article class="section-title">
         <h1>This Website is Awesome</h1>
         <p>
-          Heres a description of why this website is so awesome. Also here is
-          some Pizza Ipsum. Pizza ipsum dolor amet mayo mozzarella stuffed thin
-          crust Chicago style parmesan. Lasagna thin crust mushrooms party.
-          Pizza red onions extra sauce pineapple bianca hand tossed onions large
-          black olives NY style.
+          RVA-MACS is a local richmond macaron shop that prides themselves on quality french macarons. We source the finest ingredients and make our products in small batches so they receive the time and attnetion that is required.
+          <button class="section-button">Sign Up</button>
         </p>
-        <button class="section-button">Sign Up</button>
       </article>
-      <div class="section-one__image"></div>
+      <div class="section-one__image">
+        <img src="/img/macarons.jpg" alt="macarons on a tree" class="macarons">
+      </div>
     </section>
 
     <section class="section-two">
@@ -95,7 +93,8 @@
           <button>Sign Up</button>
         </div>
       </div>
-      <footer>Copyright &#169; The Odin Project 2021</footer>
+      
     </section>
+    <footer>Copyright &#169; The Odin Project 2021</footer>
   </body>
 </html>
