--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
     <section class="section-one">
       <article class="section-title">
         <h1>This Website is Awesome</h1>
-        <p>
-          RVA-MACS is a local richmond macaron shop that prides themselves on quality french macarons. We source the finest ingredients and make our products in small batches so they receive the time and attnetion that is required.
+        <p>RVA-MACS is a local richmond macaron shop that prides themselves on quality french macarons.
           <button class="section-button">Sign Up</button>
         </p>
       </article>
