Updated Section colors and added new image

--- a/index.html
+++ b/index.html
@@ -5,7 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RVA-MACS</title>
+
+    <!-- Fonts -->
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Stick+No+Bills:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800&family=Stick+No+Bills:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -22,12 +36,18 @@
     <section class="section-one">
       <article class="section-title">
         <h1>This Website is Awesome</h1>
-        <p>RVA-MACS is a local richmond macaron shop that prides themselves on quality french macarons.
+        <p>
+          This Website has some subtext that goes here under the main title.
+          It's a smaller font and the color is lower contrast.
           <button class="section-button">Sign Up</button>
         </p>
       </article>
       <div class="section-one__image">
-        <img src="/img/macarons.jpg" alt="macarons on a tree" class="macarons">
+        <img
+          src="/img/coffeetruck.jpg"
+          alt="A blue coffee truck"
+          class="coffee-truck"
+        />
       </div>
     </section>
 
@@ -78,22 +98,21 @@
         aliquam id diam maecenas ultricies mi. Aliquam sem et tortor consequat
         id porta nibh venenatis cras. Ante in nibh mauris cursus mattis molestie
         a iaculis.
-        <blockquote>
+      </blockquote>
       <p><strong>-CoffeyDoesCode, Man of Pizza</strong></p>
     </section>
 
     <section class="section-four">
       <div class="section-four__container">
         <div>
-          <h4>Call to Action!</h4>
+          <h3>Call to Action!</h3>
           <p>Sign Up by clicking the button on the right!</p>
         </div>
         <div>
           <button>Sign Up</button>
         </div>
       </div>
-      
     </section>
-    <footer>Copyright &#169; The Odin Project 2021</footer>
+    <footer><p>Copyright &#169; The Odin Project 2021</p></footer>
   </body>
 </html>
