--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project Blue</title>
 
-    <!-- Fonts -->
     <link rel="stylesheet" href="style.css" />
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -26,9 +26,15 @@
       <nav>
         <h2>Header Logo</h2>
         <ul>
-          <li><h3>Header Link One</h3></li>
-          <li><h3>Header Link One</h3></li>
-          <li><h3>Header Link One</h3></li>
+          <li>
+            <h3><a href="#">Header Link One</a></h3>
+          </li>
+          <li>
+            <h3><a href="#">Header Link One</a></h3>
+          </li>
+          <li>
+            <h3><a href="#">Header Link One</a></h3>
+          </li>
         </ul>
       </nav>
     </header>
@@ -56,35 +62,19 @@
       <div class="card-holder">
         <div class="card">
           <div class="card-image"></div>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Sit amet
-            justo donec enim diam vulputate ut pharetra.
-          </p>
+          <p>this is some subtext under and illustration or image</p>
         </div>
         <div class="card">
           <div class="card-image"></div>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Sit amet
-            justo donec enim diam vulputate ut pharetra.
-          </p>
+          <p>this is some subtext under and illustration or image</p>
         </div>
         <div class="card">
           <div class="card-image"></div>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Sit amet
-            justo donec enim diam vulputate ut pharetra.
-          </p>
+          <p>this is some subtext under and illustration or image</p>
         </div>
         <div class="card">
           <div class="card-image"></div>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Sit amet
-            justo donec enim diam vulputate ut pharetra.
-          </p>
+          <p>this is some subtext under and illustration or image</p>
         </div>
       </div>
     </section>
