Cleaned up section three

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
       </nav>
     </header>
 
+    <!-- Section One -->
+
     <section class="section-one">
       <article class="section-title">
         <h1>This Website is Awesome</h1>
@@ -56,6 +58,8 @@
         />
       </div>
     </section>
+
+    <!-- Section Two -->
 
     <section class="section-two">
       <h3>Some Random Information</h3>
@@ -79,18 +83,20 @@
       </div>
     </section>
 
+    <!-- Section Three -->
+
     <section class="section-three">
-      <blockquote>
-        Et tortor consequat id porta. Commodo viverra maecenas accumsan lacus
-        vel facilisis volutpat est velit. Pellentesque nec nam aliquam sem et.
-        Proin libero nunc consequat interdum. Purus non enim praesent elementum
-        facilisis leo. Et tortor consequat id porta nibh. Ut pharetra sit amet
-        aliquam id diam maecenas ultricies mi. Aliquam sem et tortor consequat
-        id porta nibh venenatis cras. Ante in nibh mauris cursus mattis molestie
-        a iaculis.
-      </blockquote>
-      <p><strong>-CoffeyDoesCode, Man of Pizza</strong></p>
+      <div class="section-three__content">
+        <blockquote>
+          For me happiness occurs arbitrarily: a moment of eye contact on a bus,
+          where all at once you fall in love; or a frozen second in a park where
+          it's enough that there are trees in the world.
+        </blockquote>
+        <p class="quoted"><strong>-Russell Brand</strong></p>
+      </div>
     </section>
+
+    <!-- Section Four -->
 
     <section class="section-four">
       <div class="section-four__container">
@@ -103,6 +109,8 @@
         </div>
       </div>
     </section>
-    <footer><p>Copyright &#169; The Odin Project 2021</p></footer>
+    <footer>
+      <p>Copyright &#169; The Odin Project 2021</p>
+    </footer>
   </body>
 </html>
