--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project Blue</title>
 
+    <!-- Style Sheet -->
+
     <link rel="stylesheet" href="style.css" />
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -24,10 +26,16 @@
   <body>
     <header>
       <nav>
-        <h2>Header Logo</h2>
+        <h2>CoffeyDoesCode</h2>
         <ul>
           <li>
-            <h3><a href="#">Header Link One</a></h3>
+            <h3>
+              <a
+                href="https://www.youtube.com/watch?v=HIcSWuKMwOw"
+                target="_blank"
+                >Header Link One
+              </a>
+            </h3>
           </li>
           <li>
             <h3><a href="#">Header Link One</a></h3>
@@ -65,19 +73,27 @@
       <h3>Some Random Information</h3>
       <div class="card-holder">
         <div class="card">
-          <div class="card-image"></div>
+          <a href="https://coolors.co/" target="_blank">
+            <div class="card-image"></div>
+          </a>
           <p>this is some subtext under and illustration or image</p>
         </div>
         <div class="card">
-          <div class="card-image"></div>
+          <a href="https://github.com/coffeydoescode" target="_blank">
+            <div class="card-image"></div>
+          </a>
           <p>this is some subtext under and illustration or image</p>
         </div>
         <div class="card">
-          <div class="card-image"></div>
+          <a href="https://www.theodinproject.com/" target="_blank">
+            <div class="card-image"></div>
+          </a>
           <p>this is some subtext under and illustration or image</p>
         </div>
         <div class="card">
-          <div class="card-image"></div>
+          <a href="https://www.theminimalists.com/" target="_blank">
+            <div class="card-image"></div>
+          </a>
           <p>this is some subtext under and illustration or image</p>
         </div>
       </div>
@@ -101,7 +117,7 @@
     <section class="section-four">
       <div class="section-four__container">
         <div>
-          <h3>Call to Action!</h3>
+          <h4>Good Morning Sanfrancisco!</h4>
           <p>Sign Up by clicking the button on the right!</p>
         </div>
         <div>
