--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </article>
       <div class="section-one__image">
         <img
-          src="/img/coffeetruck.jpg"
+          src="img/coffeetruck.jpg"
           alt="A blue coffee truck"
           class="coffee-truck"
         />
